package com.dianping.dpsf.protocol.protobuf;

option java_package="com.dianping.dpsf.protocol.protobuf";
option java_outer_classname="DpsfTestMessages";

message CreateOrderRequest {

	optional string productName = 1;
	optional int32 count = 2;

}

message CreateOrderResponse {
	required bool succeed = 1;
}

message Order {
	required int32 id = 1;
	optional string productName = 2;
}

message OrderID {
	required int32 id = 1;
}

service OrderService {
	rpc createOrder(CreateOrderRequest) returns(CreateOrderResponse);
	rpc getOrder(OrderID) returns(Order);
}
